# gameboy

./: .gitignore  Cargo.toml  LICENSE  README.md  TODO.md  vscode.code-workspace
data/: opcodes.json
src/: alu.rs  cpu.rs  debug.rs  emulator.rs  gamepak.rs  input.rs  main.rs  mmu.rs  opcode.rs  register.rs  registers.rs  screen.rs
src/emulator/: cpu.rs  mmu.rs  mod.rs  opcode.rs
src/guest/: alu.rs  cpu.rs  gamepad.rs  gpu.rs  mod.rs  opcode.rs  opcodes.rs  ppu.rs
src/guest/cartridge/: empty.rs  mbc0.rs  mbc1.rs  mod.rs
src/guest/mmu/: apu.rs  bootloader.rs  bootrom.rs  cartridge.rs  hwreg.rs  hwregisters.rs  interrupts.rs  mod.rs  ppu.rs  reg.rs  registers.rs  timer.rs
src/guest/systems/: alu.rs  apu.rs  cpu.rs  gamepad.rs  mod.rs  ppu.rs  timer.rs
src/guest/systems/apu/: mod.rs  square.rs  wave.rs
src/host/: audio.rs  debugger.rs  input.rs  mod.rs  screen.rs
