[package]
name = "gameboy"
version = "0.1.0"
authors = ["Andrew Blakey <ablakey@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pretty-hex = "*"
serde = { version = "*", features = ["derive"] }
serde_json = "*"
tokio = { version = "1", features = ["full"] }

[dependencies.sdl2]
version = "0.33.0"
features = ["gfx"]
